Revision 6: Use StringUtils.isBlank and add imports per PR review